--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --config webpack.dev.config --progress --profile --colors",
+    "clean:dist": "./node_modules/.bin/rimraf dist",
+    "build": "npm run build:prod",
+    "build:prod": "npm run clean:dist && ./node_modules/.bin/webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -41,6 +44,7 @@
     "tslint-loader": "^2.1.3",
     "typescript": "^1.8.7",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-md5-hash": "0.0.5"
   }
 }
